pom actualizado